@@ -119,8 +119,8 @@ EOD
     assert_equal 25.0, six.price
   end
 
-  def test_listings_parse    
-    category = CraigScrape::Listings.new read_as_hpricot('listing_samples/category_output.html')
+  def test_listings_parse 
+    category = CraigScrape.scrape_listing relative_uri_for('listing_samples/category_output.html')
     assert_equal 'index100.html', category.next_page_href
     assert_equal 100, category.posts.length
     category.posts[0..80].each do |l|
@@ -128,19 +128,19 @@ EOD
       assert_equal 18, l.date.day
     end
     
-    category2 = CraigScrape::Listings.new read_as_hpricot('listing_samples/category_output_2.html')
+    category2 = CraigScrape.scrape_listing relative_uri_for('listing_samples/category_output_2.html')
     assert_equal 'index900.html', category2.next_page_href
     assert_equal 100, category2.posts.length
     
-    long_search = CraigScrape::Listings.new read_as_hpricot('listing_samples/long_search_output.html')
+    long_search = CraigScrape.scrape_listing relative_uri_for('listing_samples/long_search_output.html')
     assert_equal '/search/rea?query=house&minAsk=min&maxAsk=max&bedrooms=&s=800', long_search.next_page_href
     assert_equal 100, long_search.posts.length
     
-    short_search = CraigScrape::Listings.new read_as_hpricot('listing_samples/short_search_output.html')
+    short_search = CraigScrape.scrape_listing relative_uri_for('listing_samples/short_search_output.html')
     assert_equal nil, short_search.next_page_href
     assert_equal 93, short_search.posts.length
     
-    mia_fua_index8900_052109 = CraigScrape::Listings.new read_as_hpricot('listing_samples/mia_fua_index8900.5.21.09.html')
+    mia_fua_index8900_052109 = CraigScrape.scrape_listing relative_uri_for('listing_samples/mia_fua_index8900.5.21.09.html')
     assert_equal 'index9000.html', mia_fua_index8900_052109.next_page_href
     assert_equal 100, mia_fua_index8900_052109.posts.length
     mia_fua_index8900_052109.posts[0..13].each do |l|
@@ -154,7 +154,7 @@ EOD
   end
   
   def test_posting_parse
-    posting0 = CraigScrape::PostFull.new read_as_hpricot('post_samples/posting0.html')
+    posting0 = CraigScrape.scrape_full_post relative_uri_for('post_samples/posting0.html')
     assert_equal "Has storage for videos/dvds. About 2 ft high by 21/2 ft widw. Almond/light beige color", posting0.contents
     assert_equal ["south florida craigslist", "miami / dade", "furniture - by owner"], posting0.full_section
     assert_equal "tv cart on wheels - $35 (NMB)", posting0.header
@@ -167,7 +167,7 @@ EOD
     assert_equal "Has storage for videos/dvds. About 2 ft high by 21/2 ft widw. Almond/light beige color",posting0.contents_as_plain
     assert_equal 35.0, posting0.price
     
-    posting1 = CraigScrape::PostFull.new read_as_hpricot('post_samples/posting1.html')
+    posting1 = CraigScrape.scrape_full_post relative_uri_for('post_samples/posting1.html')
     assert_equal "Residential income property\227Investors this property is for you! This duplex has a 2bedroom/1bath unit on each side. It features updated kitchens and baths (new tubs, toilet, sink, vanities), ceramic tile flooring throughout, separate water and electric meters and on site laundry facilities. It is also closed to the Galleria, beaches and downtown Fort Lauderdale! \r<br />\n\r<br />\nJe parle le Fran\347ais\r<br />\n\r<br />\nThis property is being offered by Blaunch Perrier, Broker Associate, Atlantic Properties International. Blaunch can be reached at 954-593-0077. For additional property information you may also visit www.garylanham.com\r<br />\n\r<br />", posting1.contents
     assert_equal ["south florida craigslist", "broward county", "real estate - by broker"], posting1.full_section
     assert_equal "$189900 / 4br - Investment Property--Duplex in Fort Lauderdale", posting1.header
@@ -180,7 +180,7 @@ EOD
     assert_equal "Residential income property\227Investors this property is for you! This duplex has a 2bedroom/1bath unit on each side. It features updated kitchens and baths (new tubs, toilet, sink, vanities), ceramic tile flooring throughout, separate water and electric meters and on site laundry facilities. It is also closed to the Galleria, beaches and downtown Fort Lauderdale! \r\n\r\nJe parle le Fran\347ais\r\n\r\nThis property is being offered by Blaunch Perrier, Broker Associate, Atlantic Properties International. Blaunch can be reached at 954-593-0077. For additional property information you may also visit www.garylanham.com\r\n\r", posting1.contents_as_plain
     assert_equal 189900.0, posting1.price
 
-    posting2 = CraigScrape::PostFull.new read_as_hpricot('post_samples/posting2.html')
+    posting2 = CraigScrape.scrape_full_post relative_uri_for('post_samples/posting2.html')
     assert_equal 15775, posting2.contents.length # This is easy, and probably fine enough
     assert_equal ["south florida craigslist", "broward county", "cars & trucks - by dealer"], posting2.full_section
     assert_equal "PRESENTING A ELECTRON BLUE METALLIC 2002 CHEVROLET CORVETTE Z06 6 SPEE - $23975 (Fort Lauderdale)", posting2.header
@@ -193,7 +193,7 @@ EOD
     assert_equal "\302\240 Sheehan Buick Pontiac GMC \302\240 Pompano Beach, FL(754) 224-3257 \302\240PRESENTING A ELECTRON BLUE METALLIC 2002 CHEVROLET CORVETTE Z06 6 SPEED FLORIDA DRIVEN SMOKIN' SPORTS CAR!2002 Chevrolet Corvette Z06 Florida Driven AutoCheck Certified 5.7L V8 6sp2 Door Coupe.\302\240Price: \302\240 $23,975Exterior:Electron Blue MetallicInterior:BlackStock#:P5110AVIN:1G1YY12S625129021FREE AutoCheck Vehicle ReportMileage:63,560Transmission:6 Speed ManualEngine:V8 5.7L OHVWarranty:Limited WarrantyTitle:Clear\302\273\302\240View All 58 Photos\302\273\302\240View Full Vehicle Details\302\273\302\240Ask the Seller a Question\302\273\302\240E-mail this to a Friend\302\240 DescriptionPRESENTING A ELECTRON BLUE METALLIC 2002 CHEVROLET CORVETTE Z06 6 SPEED FLORIDA DRIVEN SMOKIN' SPORTS CAR!\r\n\r\nLOADED WITH BLACK LEATHER BUCKET SEATS, POWER DRIVERS SEAT, DUAL ZONE CLIMATE CONTROL, 4 WHEEL ABS BRAKES, POWER STEERING AND BRAKES, REAR LIMITED SLIP DIFFERENTIAL, STABILITY CONTROL, CRUISE CONTROL, TLT STEERING WHEEL, POWER WINDOWS AND LOCKS, AUTOMATIC ON/OFF HEADLAMPS, FOG LIGHTS, DUAL AIR BAG SAFETY, AM/FM STEREO CD PLAYER, INTERMITTENT WINDSHIELD WIPERS AND SO MUCH MORE - THIS CAR IS TOTALLY HOT WITH GREAT LOW MILES!\r\n\r\nPlease call us to make your deal now at 1-888-453-5244. Please visit our Website at www.sheehanautoplex.com ***View 50+ Pictures of this vehicle - a complete description including standard features and all added options & a FREE AUTO CHECK REPORT at www.sheehanautoplex.com. ***Financing for Everyone - Good credit - bad credit - divorce - charge off's - NO PROBLEM. To complete a secure credit application, please visit our website at www.sheehanautoplex.com ***The largest Dealer in the State of Florida - We export all over the world - For details please visit www.sheehanautoplex.com ***Sheehan Autoplex takes great pride in our outstanding customer service and has been recognized by the following associations - BBB (Better Business Bureau) - NIADA - and the FIADA. Call us to get your best deal. CALL NOW. 1-888-453-5244\302\240 Contact Sheehan Buick Pontiac GMCPhone:(754) 224-3257Fax:(954) 781-9050Phone:(754) 224-3257E-mail:sales@proauto.comBusiness HoursWeekdays:9:00 AM to 9:00 PMSat:9:00 AM to 6:00 PMSun:",posting2.contents_as_plain
     assert_equal 23975.0, posting2.price
 
-    posting3 = CraigScrape::PostFull.new read_as_hpricot('post_samples/posting3.html')
+    posting3 = CraigScrape.scrape_full_post relative_uri_for('post_samples/posting3.html')
     assert_equal "1992 Twin Turbo 300ZX. This car is pearl white outside and Camel leather interior with suede accents. Motor was re-done from the ground up two years ago. 23,000 on new motor rebuild! New Leather seats and center arm rest done also two years ago. Has Alpine Am/Fm Cd with Ipod cable, Viper pager alarm New! JL Audio Amp & JLAudio sub box custom made. Mtx mids& highs component speakers sparate tweeter. Car runs strong & straight. Just detailed the interior. Exterior should be painted. This car once painted will sell for over $10,000. \r<br />\nCome get a great deal now! offers and trades will be considered. 786-303-6550 Manny", posting3.contents
     assert_equal ["south florida craigslist", "miami / dade", "cars & trucks - by owner"], posting3.full_section
     assert_equal "300ZX Nissan Twin Turbo 1992 - $5800 (N.Miami/ Hialeah)", posting3.header
@@ -207,7 +207,7 @@ EOD
     assert_equal 5800.0, posting3.price
 
     # This one ended up being quite a curveball since the user uploaded HTML was such junk:
-    posting4 = CraigScrape::PostFull.new read_as_hpricot('post_samples/posting4.html')
+    posting4 = CraigScrape.scrape_full_post relative_uri_for('post_samples/posting4.html')
     assert_equal 20640, posting4.contents.length
     assert_equal ["south florida craigslist", "broward county", "real estate - by broker"], posting4.full_section
     assert_equal "$225000 / 3br - Palm Aire Golf Corner Unit!", posting4.header
@@ -220,7 +220,7 @@ EOD
     assert_equal 6399,posting4.contents_as_plain.length
     assert_equal 225000.0, posting4.price
     
-    posting5 = CraigScrape::PostFull.new read_as_hpricot('post_samples/posting5.html')
+    posting5 = CraigScrape.scrape_full_post relative_uri_for('post_samples/posting5.html')
     assert_equal true, posting5.flagged_for_removal?
     assert_equal nil, posting5.contents
     assert_equal ["south florida craigslist", "palm beach co", "apts/housing for rent"], posting5.full_section
@@ -234,7 +234,7 @@ EOD
     assert_equal nil, posting5.contents_as_plain
     assert_equal nil, posting5.price
     
-    posting_deleted = CraigScrape::PostFull.new read_as_hpricot('post_samples/this_post_has_been_deleted_by_its_author.html')
+    posting_deleted = CraigScrape.scrape_full_post relative_uri_for('post_samples/this_post_has_been_deleted_by_its_author.html')
     assert_equal true, posting_deleted.deleted_by_author?
     assert_equal nil, posting_deleted.contents
     assert_equal ["south florida craigslist", "broward county", "cars & trucks - by owner"], posting_deleted.full_section
@@ -248,7 +248,7 @@ EOD
     assert_equal nil, posting_deleted.contents_as_plain
     assert_equal nil, posting_deleted.price
 
-    posting6 = CraigScrape::PostFull.new read_as_hpricot('post_samples/1207457727.html')
+    posting6 = CraigScrape.scrape_full_post relative_uri_for('post_samples/1207457727.html')
     assert_equal "<p><br />Call!! asking for a new owner.<br />  no deposit required rent to own properties. <br /> <br /> Defaulting payment records are not a problem, <br /> we will help you protect the previous owners credit history! 202-567-6371  <br /><br /></p>",posting6.contents
     assert_equal "Call!! asking for a new owner.  no deposit required rent to own properties.   Defaulting payment records are not a problem,  we will help you protect the previous owners credit history! 202-567-6371  ",posting6.contents_as_plain
     assert_equal false,posting6.deleted_by_author?
@@ -270,6 +270,10 @@ EOD
     Hpricot.parse(
       File.open('%s/%s' % [File.dirname(__FILE__), test_file]).read
     )
+  end
+  
+  def relative_uri_for(filename)
+    'file://%s/%s' % [File.dirname(File.expand_path(__FILE__)), filename]
   end
   
   def pp_assertions(obj, obj_name)
